@@ -20,7 +20,7 @@ public:
     DECLARE_CLASS(wxPrinterDC)
 
     // Create a printer DC
-    wxPrinterDC(const wxString& driver, const wxString& device, const wxString& output, bool interactive = TRUE, int orientation = wxPORTRAIT);
+    wxPrinterDC(const wxString& driver, const wxString& device, const wxString& output, bool interactive = TRUE, wxPrintOrientation orientation = wxPORTRAIT);
 
     virtual ~wxPrinterDC();
 };
